# NWSS-CNC

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  LICENSE  NWSS-CNC_User_Guide_and_Technical_Report.md  README.md  RELEASE_GUIDE.md  build-macos.sh  build-windows.bat  simple-build.sh  validate-workflows.sh
.github/: README.md
.github/workflows/: build-all-platforms.yml  build-and-release.yml  build-macos.yml  build-release.yaml  build-windows.yml  ci.yml
3d-tests/: CMakeLists.txt  test.stl  test_example.cpp
3d-tests/include/: gcode_generator.h  geometry_analyzer.h  stl_loader.h  toolpath_generator.h  types.h  validation_engine.h
3d-tests/src/: gcode_generator.cpp  geometry_analyzer.cpp  main.cpp  stl_loader.cpp  toolpath_generator.cpp  validation_engine.cpp
nwss-cnc/: CMakeLists.txt
nwss-cnc-gui/: CMakeLists.txt
nwss-cnc-gui/src/: gcodeeditor.cpp  gcodeeditor.h  gcodeoptionspanel.cpp  gcodeoptionspanel.h  gcodeviewer3d.cpp  gcodeviewer3d.h  main.cpp  mainwindow.cpp  mainwindow.h  svgtogcode.cpp  svgtogcode.h  svgviewer.cpp  svgviewer.h
nwss-cnc/apps/: config_wizard.cpp  svg_converter.cpp
nwss-cnc/example_files/: simple_shapes.csv  tiger.csv
nwss-cnc/include/core/: area_cutter.h  cam_processor.h  config.h  discretizer.h  gcode_generator.h  geometry.h  svg_parser.h  tool.h  tool_offset.h  transform.h  utils.h
nwss-cnc/include/gui/: gcodeeditor.h  gcodeoptionspanel.h  gcodeviewer3d.h  mainwindow.h  svgdesigner.h  svgtogcode.h  toolmanager.h
nwss-cnc/include/nwss-cnc/: discretizer.h  gcode_generator.h  geometry.h  svg_parser.h  transform.h  utils.h
nwss-cnc/resources/: resources.qrc
nwss-cnc/resources/icons/: nwss-cnc-icon.icns
nwss-cnc/resources/linux/: nwss-cnc.desktop.in
nwss-cnc/resources/macos/: Info.plist.in  entitlements.plist  macos_fixup.cmake
nwss-cnc/resources/windows/: app.rc.in
nwss-cnc/src/: config.cpp  discretizer.cpp  gcode_generator.cpp  geometry.cpp  main.cpp  nanosvg_impl.cpp  svg_parser.cpp  transform.cpp  utils.cpp
nwss-cnc/src/core/: area_cutter.cpp  cam_processor.cpp  config.cpp  discretizer.cpp  gcode_generator.cpp  geometry.cpp  nanosvg_impl.cpp  svg_parser.cpp  tool.cpp  tool_offset.cpp  transform.cpp  utils.cpp
nwss-cnc/src/gui/: gcodeeditor.cpp  gcodeoptionspanel.cpp  gcodeviewer3d.cpp  mainwindow.cpp  svgdesigner.cpp  svgtogcode.cpp  svgviewer.cpp  toolmanager.cpp
scripts/: format.sh
